<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/profile_divider"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo_label" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/profile"/>


            <Button
                android:id="@+id/change_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/profile_photo_change_text"
                android:onClick="onChangeClick" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_label" />

        <EditText
            android:id="@+id/edit_prof_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name_hint"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_label" />

        <EditText
            android:id="@+id/edit_prof_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_label" />

        <EditText
            android:id="@+id/edit_prof_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_phone_hint"
            android:inputType="phone"
            android:autofillHints="phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_gender_label" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/gender_select">



            <RadioButton
                android:id="@+id/male_gender_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_gender_male_text" />

            <RadioButton
                android:id="@+id/female_gender_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_gender_female_text" />

            <RadioButton
                android:id="@+id/other_gender_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_gender_other_text" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_class_label" />

        <EditText
            android:id="@+id/edit_prof_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_class_hint"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_major_label" />

        <EditText
            android:id="@+id/edit_prof_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_major_hint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="30dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/save_prof_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/profile_save_text"
                android:onClick="onSaveClick"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/cancel_prof_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/profile_cancel_text"
                android:onClick="onCancelClick"/>

            <Space
                android:layout_width="30dp"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

